@@ -18,10 +18,11 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
 import java.security.GeneralSecurityException;
 import java.text.SimpleDateFormat;
+import java.util.Base64;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
@@ -40,7 +41,6 @@ import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.Response;
-import javax.xml.bind.DatatypeConverter;
 
 import org.apache.commons.lang.StringUtils;
 import org.eclipse.smarthome.core.library.types.DecimalType;
@@ -61,8 +61,8 @@ import org.eclipse.smarthome.core.types.State;
 import org.eclipse.smarthome.core.types.UnDefType;
 import org.glassfish.jersey.client.ClientProperties;
 import org.openhab.binding.tesla.internal.TeslaBindingConstants;
-import org.openhab.binding.tesla.internal.TeslaChannelSelectorProxy;
 import org.openhab.binding.tesla.internal.TeslaBindingConstants.EventKeys;
+import org.openhab.binding.tesla.internal.TeslaChannelSelectorProxy;
 import org.openhab.binding.tesla.internal.TeslaChannelSelectorProxy.TeslaChannelSelector;
 import org.openhab.binding.tesla.internal.protocol.ChargeState;
 import org.openhab.binding.tesla.internal.protocol.ClimateState;
@@ -290,10 +290,10 @@ public class TeslaHandler extends BaseThingHandler {
                                 moveSunroof(0);
                             } else if (command instanceof IncreaseDecreaseType
                                     && command == IncreaseDecreaseType.INCREASE) {
-                                moveSunroof(Math.min(chargeState.charge_limit_soc + 1, 100));
+                                moveSunroof(Math.min(vehicleState.sun_roof_percent_open + 1, 100));
                             } else if (command instanceof IncreaseDecreaseType
                                     && command == IncreaseDecreaseType.DECREASE) {
-                                moveSunroof(Math.max(chargeState.charge_limit_soc - 1, 0));
+                                moveSunroof(Math.max(vehicleState.sun_roof_percent_open - 1, 0));
                             }
                             break;
                         }
@@ -392,7 +392,7 @@ public class TeslaHandler extends BaseThingHandler {
                                 if (((OnOffType) command) == OnOffType.ON) {
                                     if (eventThread == null) {
                                         eventThread = new Thread(eventRunnable,
-                                                "ESH-Tesla-Event Stream-" + getThing().getUID());
+                                                "openHAB-Tesla-Events-" + getThing().getUID());
                                         eventThread.start();
                                     }
                                 } else {
@@ -1415,11 +1415,7 @@ public class TeslaHandler extends BaseThingHandler {
 
         private String getBasicAuthentication() {
             String token = this.user + ":" + this.password;
-            try {
-                return "Basic " + DatatypeConverter.printBase64Binary(token.getBytes("UTF-8"));
-            } catch (UnsupportedEncodingException ex) {
-                throw new IllegalStateException("Cannot encode with UTF-8", ex);
-            }
+            return "Basic " + Base64.getEncoder().encodeToString(token.getBytes(StandardCharsets.UTF_8));
         }
     }
 }
